<resources>
  <string name="app_name">آسان کار</string>
  <string name="bom">BOM</string>
  <string name="fa_attendence">حضور و غیاب</string>
  <string name="fa_receipt">فیش حقوقی</string>
  <string name="fa_property">اموال تحویلی من</string>
  <string name="fa_leave">ثبت مرخصی</string>
  <string name="fa_food">ثبت ژتون</string>
  <string name="fa_mynotes">یادداشت ها</string>
  <string name="fa_instruction">دستورالعمل</string>
  <string name="fa_qcplan">طرح کنترل کیفی</string>
  <string name="USERNAME">نام کاربری</string>
  <string name="PASSWORD">رمز عبور</string>
  <string name="ENTER"> "   " ورود</string>
  <string name="MODIFY">ویرایش</string>
  <string name="SAVE">ذخیره</string>
  <string name="LogoDescription">کارا</string>
  <string name="NAME">نام</string>
  <string name="FAMILY_NAME">نام خانوادگی</string>
  <string name="img_me">من</string>
  <string name="img_logs">فعالیت روزانه</string>
  <string name="img_op">OP</string>
  <string name="img_bom">BOM</string>
  <string name="img_office">اداری</string>
  <string name="img_planning">برنامه ریزی</string>
  <string name="img_production">تولید</string>
  <string name="img_engineering">فنی مهندسی</string>
  <string name="img_instructions">دستورالعمل ها</string>
  <string name="img_educational">آموزشی</string>
  <string name="img_suggestions">پیشنهادات</string>
  <string name="img_qc">کنترل کیفی</string>
  <string name="PRODUCTION_LINES">خطوط تولید</string>
  <string name="PRODUCT_TYPE">نوع محصول</string>
  <string name="CONFIRM">تایید</string>
  <string name="MIDDLE_BOSS">میدل باس</string>
  <string name="RENO">رنو</string>
  <string name="BIMARESTAN">بیمارستان</string>
  <string name="AIRPORT">فرودگاهی</string>
  <string name="CITY_BOSS">اتوبوس شهری</string>
  <string name="MINI_BOSS">مینی بوس</string>
  <string name="STATIONS">ایستگاه ها</string>
  <string name="STORAGE">انبار</string>
  <string name="Operating_Procedure">فرآیندهای تولید</string>
  <string name="title_activity_o_p">MainActivity</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="text_print">Print</string>
  <string name="text_share">Share</string>
  <string name="text_generated_file_error">Generated File is null or does not exist!</string>
  <string name="title_activity_project_control_main">MainActivity</string>
</resources>