<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"

  android:animationCache="true"
  android:background="@drawable/back_login"
  tools:context=".activities.login.Login">

    <Button
      android:id="@+id/btn_enterapp"
      android:layout_width="100dp"
      android:layout_height="60dp"
      android:background="@drawable/button"
      android:drawableStart="@android:drawable/checkbox_on_background"
      android:text="@string/ENTER"
      android:textColor="#FFFFFF"
      android:textColorLink="#000000"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/guideline4"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/guideline5"
      app:layout_constraintTop_toTopOf="@+id/guideline2"
      app:layout_constraintVertical_bias="0.19999999" />

    <EditText
      android:id="@+id/edittxt_username"
      android:layout_width="0dp"
      android:layout_height="50dp"
      android:autofillHints="@string/USERNAME"
      android:background="@drawable/edit"
      android:drawableStart="@drawable/ic_person"
      android:ems="10"
      android:gravity="center"
      android:hint="@string/USERNAME"
      android:inputType="number"
      android:maxLength="15"
      app:layout_constraintBottom_toTopOf="@+id/edittxt_password"
      app:layout_constraintEnd_toStartOf="@+id/guideline6"
      app:layout_constraintStart_toStartOf="@+id/guideline5"
      app:layout_constraintTop_toTopOf="@+id/guideline"
      app:layout_constraintVertical_bias="0.79" />

    <EditText
      android:id="@+id/edittxt_password"
      android:layout_width="0dp"
      android:layout_height="50dp"
      android:autofillHints="@string/PASSWORD"
      android:background="@drawable/edit"
      android:drawableStart="?android:attr/fingerprintAuthDrawable"
      android:ems="10"
      android:gravity="center"
      android:hint="@string/PASSWORD"
      android:inputType="textPassword"
      android:maxLength="15"
      app:layout_constraintBottom_toTopOf="@+id/guideline2"
      app:layout_constraintEnd_toEndOf="@+id/edittxt_username"
      app:layout_constraintStart_toStartOf="@+id/edittxt_username" />

    <ImageView
      android:id="@+id/img_logo"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@android:color/transparent"
      android:contentDescription="@string/LogoDescription"
      app:layout_constraintBottom_toTopOf="@+id/guideline"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline3"
      app:layout_constraintVertical_bias="1.0"
      app:srcCompat="@drawable/logo" />

    <TextView
      android:id="@+id/text_login_coname"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="Endorced By YouNate"
      android:textColor="#000000"
      android:textSize="12sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.75" />

    <ProgressBar
      android:id="@+id/login_progressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:indeterminateTint="#3F6165"
      android:visibility="gone"
      app:layout_constraintBottom_toTopOf="@+id/guideline2"
      app:layout_constraintEnd_toStartOf="@+id/guideline6"
      app:layout_constraintStart_toStartOf="@+id/guideline5"
      app:layout_constraintTop_toBottomOf="@+id/img_logo"
      tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>