<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/gradiantback"
  tools:context=".activities.mainpage.MainPageActivity">

    <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
              android:id="@+id/toolbar_mainpage"
              app:titleTextColor="@android:color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/semitranparent"
              android:minHeight="?attr/actionBarSize"
              android:theme="?attr/actionBarTheme" />

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginBottom="16dp"
              android:layout_marginEnd="8dp"
              android:layout_marginStart="8dp"
              android:layout_marginTop="16dp"
              android:background="#00FFFFFF"
              android:baselineAligned="false"
              android:orientation="horizontal">

                <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="8dp"
                  android:layout_marginStart="8dp"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:padding="16dp">

                    <ImageButton
                      android:id="@+id/img_production"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_gravity="center"
                      android:layout_weight="1"
                      android:background="@drawable/image_bracket"
                      android:clickable="true"
                      android:contentDescription="new menu"
                      android:focusable="auto"
                      app:srcCompat="@drawable/ic_production" />

                    <TextView
                      android:id="@+id/txt_production"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:text="@string/img_production"
                      android:textColor="#FFFFFF"
                      android:textColorHighlight="#FFFFFF"
                      android:textSize="16sp"
                      android:textStyle="normal|bold" />
                </LinearLayout>

                <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="8dp"
                  android:layout_marginStart="8dp"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:padding="16dp">

                    <ImageButton
                      android:id="@+id/img_op"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_gravity="center"
                      android:layout_weight="1"
                      android:background="@drawable/image_bracket"
                      android:clickable="true"
                      android:contentDescription="new menu"
                      android:focusable="true"
                      app:srcCompat="@drawable/ic_process" />

                    <TextView
                      android:id="@+id/txt_op"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:text="@string/img_op"
                      android:textColor="#FFFFFF"
                      android:textColorLink="#000000"
                      android:textSize="16sp"
                      android:textStyle="normal|bold" />

                </LinearLayout>

                <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="8dp"
                  android:layout_marginStart="8dp"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:padding="16dp">

                    <ImageButton
                      android:id="@+id/img_me"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_gravity="center"
                      android:layout_weight="1"
                      android:background="@drawable/image_bracket"
                      android:contentDescription="new menu"
                      app:srcCompat="@drawable/ic_profile" />

                    <TextView
                      android:id="@+id/txt_me"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:text="@string/img_me"
                      android:textColor="#FFFFFF"
                      android:textColorLink="#000000"
                      android:textSize="16sp"
                      android:textStyle="normal|bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginBottom="16dp"
              android:layout_marginEnd="8dp"
              android:layout_marginStart="8dp"
              android:layout_marginTop="16dp"
              android:background="#00FFFFFF"
              android:baselineAligned="false"
              android:orientation="horizontal">

                <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="8dp"
                  android:layout_marginStart="8dp"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:padding="16dp">

                    <ImageButton
                      android:id="@+id/img_engineering"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_gravity="center"
                      android:layout_weight="1"
                      android:background="@drawable/image_bracket"
                      android:clickable="true"
                      android:contentDescription="new menu"
                      android:focusable="auto"
                      app:srcCompat="@drawable/ic_engineer" />

                    <TextView
                      android:id="@+id/txt_engineering"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:text="@string/img_engineering"
                      android:textColor="#FFFFFF"
                      android:textColorLink="#000000"
                      android:textSize="16sp"
                      android:textStyle="normal|bold" />
                </LinearLayout>

                <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="8dp"
                  android:layout_marginStart="8dp"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:padding="16dp">

                    <ImageButton
                      android:id="@+id/img_qc"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_gravity="center"
                      android:layout_weight="1"
                      android:background="@drawable/image_bracket"
                      android:clickable="true"
                      android:contentDescription="new menu"
                      android:focusable="auto"
                      app:srcCompat="@drawable/ic_shield" />

                    <TextView
                      android:id="@+id/txt_qc"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:layout_weight="1"
                      android:fontFamily="sans-serif"
                      android:gravity="center"
                      android:text="@string/img_qc"
                      android:textColor="#FFFFFF"
                      android:textColorLink="#000000"
                      android:textSize="16sp"
                      android:textStyle="normal|bold" />
                </LinearLayout>

                <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="8dp"
                  android:layout_marginStart="8dp"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:padding="16dp">

                    <ImageButton
                      android:id="@+id/img_planning"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_gravity="center"
                      android:layout_weight="1"
                      android:background="@drawable/image_bracket"
                      android:clickable="true"
                      android:contentDescription="new menu"
                      android:focusable="auto"
                      app:srcCompat="@drawable/ic_planning" />

                    <TextView
                      android:id="@+id/txt_planning"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:text="@string/img_planning"
                      android:textColor="#FFFFFF"
                      android:textColorLink="#000000"
                      android:textSize="16sp"
                      android:textStyle="normal|bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginBottom="16dp"
              android:layout_marginEnd="8dp"
              android:layout_marginStart="8dp"
              android:layout_marginTop="16dp"
              android:background="#00FFFFFF"
              android:baselineAligned="false"
              android:orientation="horizontal">

                <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="8dp"
                  android:layout_marginStart="8dp"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:padding="16dp">

                    <ImageButton
                      android:id="@+id/img_suggestions"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_gravity="center"
                      android:layout_weight="1"
                      android:background="@drawable/image_bracket"
                      android:clickable="true"
                      android:contentDescription="new menu"
                      android:focusable="auto"
                      app:srcCompat="@drawable/ic_suggestion" />

                    <TextView
                      android:id="@+id/txt_suggestions"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:text="@string/img_suggestions"
                      android:textColor="#FFFFFF"
                      android:textColorLink="#000000"
                      android:textSize="16sp"
                      android:textStyle="normal|bold" />
                </LinearLayout>

                <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="8dp"
                  android:layout_marginStart="8dp"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:padding="16dp">

                    <ImageButton
                      android:id="@+id/img_educational"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_gravity="center"
                      android:layout_weight="1"
                      android:background="@drawable/image_bracket"
                      android:clickable="true"
                      android:contentDescription="new menu"
                      android:focusable="auto"
                      app:srcCompat="@drawable/ic_book" />

                    <TextView
                      android:id="@+id/txt_educational"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:text="@string/img_educational"
                      android:textColor="#FFFFFF"
                      android:textColorLink="#000000"
                      android:textSize="16sp"
                      android:textStyle="normal|bold" />
                </LinearLayout>

                <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="8dp"
                  android:layout_marginStart="8dp"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:padding="16dp">

                    <ImageButton
                      android:id="@+id/img_office"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_gravity="center"
                      android:layout_weight="1"
                      android:background="@drawable/image_bracket"
                      android:clickable="true"
                      android:contentDescription="new menu"
                      android:focusable="auto"
                      app:srcCompat="@drawable/ic_home_office" />

                    <TextView
                      android:id="@+id/txt_office"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:text="@string/img_office"
                      android:textColor="#FFFFFF"
                      android:textColorLink="#000000"
                      android:textSize="16sp"
                      android:textStyle="normal|bold" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>